testsuite/tests/typecheck/should_fail/T12102.stderr

T12102.hs:17:1: error: [GHC-01259]
    • Illegal constraint in a kind: forall a.
                                    (IsTypeLit a ~ True) =>
                                    a -> *
    • In the data type declaration for ‘T’
